Implement live Analytics data, enhanced reports, and migrate to new Supabase project with Admin RLS policies

--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MediConnect - Healthcare Platform</title>
-    <meta name="description" content="Connect with doctors, manage prescriptions, and take control of your health journey with MediConnect - the next-generation healthcare platform." />
-    <meta name="author" content="MediConnect" />
 
-    <meta property="og:title" content="MediConnect - Healthcare at Your Fingertips" />
-    <meta property="og:description" content="Video consultations, digital prescriptions, and comprehensive healthcare management in one platform." />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="MediConnect - Healthcare at Your Fingertips" />
-    <meta property="og:description" content="Video consultations, digital prescriptions, and comprehensive healthcare management in one platform." />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@MediConnect" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <title>MediConnect - Healthcare Platform</title>
+  <meta name="description"
+    content="Connect with doctors, manage prescriptions, and take control of your health journey with MediConnect - the next-generation healthcare platform." />
+  <meta name="author" content="MediConnect" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta property="og:title" content="MediConnect - Healthcare at Your Fingertips" />
+  <meta property="og:description"
+    content="Video consultations, digital prescriptions, and comprehensive healthcare management in one platform." />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@MediConnect" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
